  extending an existing integration, without having to re-integrate from the
  initial conditions. The integration times can be obtained using the time()
  method.

- Added C implementation for TwoPowerTriaxialPotential to enable fast orbit
  integration. The C implementation uses the hyp2f1 hypergeometric function
  and handles the special case where alpha=2.

v1.11.1 (2025-11-02)
====================

- Added EinastoPotential, the potential corresponding to the Einasto density
  profile.

- Add Fuzzy Dark Matter (FDM) dynamical friction (#731)

- Added wrapper potential to turn a potential into an oblate Staeckel potential
  (OblateStaeckelWrapperPotential).

- Added wheels for Python 3.14.

- Build wheels for multiple Pyodide versions and share on AWS site.

v1.11.0 (2025-07-02)
====================

- Removed support for Python 3.8 (which has reached its end of life in Oct 2024).

- Implement caching of PowerSphericalPotentialwCutoff to speed up evaluation of
  the forces during orbit integration.

- Turn physical units on when surface density input to AnyAxisymmetricRazorThinDiskPotential
  is given in physical units.

- Allow TwoPowerSphericalPotential to be evaluated at r=0 (#729).

- Switch to controlling compilation options through environment variables to be
  more compatible with modern pip/setup.py standards.

v1.10.2 (2025-03-03)
====================

 - Implemented the IAS15 integrator of Rein & Spiegel 2015.

 - Speed-up the C implementation of PowerSphericalPotentialwCutoff (#706).

 - Combine the drift calculations in the Python leapfrog integrator for a small
   speed-up (#690).

- Clarify the use of non-equispaced time arrays in orbit integration (#711).

- Fix the handling of unbound orbits in the Orbit action-angle interface (#712).

 - Move the checks for non-axisymmetric and dissipative potentials from internal to
   public potential/force evaluation functions (e.g., from _evaluate[Potentials,