@@ -36,7 +36,6 @@ jobs:
         - [macos-14, macosx, arm64]
         - [windows-2025, win, amd64]
         python:
-        - ["cp39","3.9"]
         - ["cp310","3.10"]
         - ["cp311","3.11"]
         - ["cp312","3.12"]
@@ -103,7 +102,6 @@ jobs:
             - [macos-14, macosx, arm64]
             - [windows-2025, win, amd64]
           python:
-            - ["cp39","3.9"]
             - ["cp310","3.10"]
             - ["cp311","3.11"]
             - ["cp312","3.12"]
